# Parable

./: .dippy  .gitignore  ARCHITECTURE_EVOLUTION.md  CLAUDE.md  EOF_TOKEN_PLAN.md  EOF_VALIDATION_PLAN.md  INTEGRATION_PLAN.md  LEXER_PLAN.md  LEXER_REFACTOR_PLAN.md  MATCHED_PAIR_REFACTOR.md  PHASE6_PLAN.md  PLAN.md  QUOTE_STATE_ROLLOUT_PLAN.md  README.md  bugs2.tests  fuzz-layer1-v4.tests  justfile  package.json  pr-body.md  pyproject.toml  ruff.toml  tsconfig.json
.claude/skills/c-fix/: SKILL.md
.claude/skills/fix-go-test/: SKILL.md
.claude/skills/idiomatize/: SKILL.md
.claude/skills/java-fix/: SKILL.md
.claude/skills/perl-fix/: SKILL.md
.claude/skills/release/: SKILL.md
.github/docker/: c.Dockerfile  csharp.Dockerfile  go.Dockerfile  lua.Dockerfile  node.Dockerfile  php.Dockerfile  python.Dockerfile  ruby.Dockerfile  swift.Dockerfile  typescript.Dockerfile  zig.Dockerfile
.github/workflows/: check.yml  ci.yml  fuzzer-agent-claude.yml  fuzzer-agent.yml  fuzzer-fix-aider.yml  fuzzer-fix.yml  release.yml
bench/: README.md  bench-compare.js  bench-compare.py  bench_parse.js  bench_parse.py  package-lock.json  package.json
docker/perl/: Dockerfile
docs/: fuzzing-research.md  gaps.md  go-transpiler.md  grammar.md  ir.md  ir.py  matched_pair_architecture_comparison.md  more-research.md  optimizations.md  planning.md  quality.md  roadmap.md  skip_matched_pair_architecture.md  transpile-go.md  transpiler-comparison.md  unified.md  variable-scoping-plan-v2.md  variable-scoping-plan.md
prompts/: dev.md  fuzzer-fix-local.md
reference/: SOURCES.md  bash-manpage.txt  posix-shell.html
src/: go.mod  parable.d.ts  parable.go  parable.js  parable.py  run_tests.py
src/parable/: __init__.py  ast.py  errors.py  parable.py  parser.py
tests/: 01_words.tests  02_commands.tests  03_pipelines.tests  04_lists.tests  05_redirects.tests  06_compound.tests  07_if.tests  08_loops.tests  09_case.tests  10_functions.tests  11_parameter_expansion.tests  12_command_substitution.tests  13_arithmetic.tests  14_here_documents.tests  15_process_substitution.tests  16_negation_time.tests  17_conditional_expr.tests  18_arrays.tests  19_coproc.tests  20_select.tests  21_cstyle_for.tests  22_pipe_stderr.tests  23_case_fallthrough.tests  24_ansi_c_quoting.tests  25_locale_translation.tests  26_variable_fd.tests  27_deprecated_arithmetic.tests  28_obscure_edge_cases.tests  29_arithmetic_internals.tests  30_extglob_case.tests  31_parser_bugs.tests  32_oils_gaps.tests  33_brace_edge_cases.tests  34_backslash_newline_bugs.tests  34_line_continuation.tests  35_parser_bugs.tests  README.md  __init__.py  conftest.py  extractors.py  (+3 more)
tests/corpus/: ORIGIN.md  literals.txt  statements.txt
tests/parable/: 08_loops.tests  11_parameter_expansion.tests  12_command_substitution.tests  13_arithmetic.tests  14_here_documents.tests  15_process_substitution.tests  17_conditional_expr.tests  18_arrays.tests  24_ansi_c_quoting.tests  31_parser_bugs.tests  36_delimiter_validation.tests  36_fuzzer.tests  cmdsub.tests  fuzz-1004.tests  fuzz-1025.tests  fuzz-10530.tests  fuzz-1061.tests  fuzz-10754.tests  fuzz-11126.tests  fuzz-11384.tests  fuzz-11579.tests  fuzz-12388.tests  fuzz-12485.tests  fuzz-13264.tests  fuzz-13371.tests  fuzz-1342.tests  fuzz-13429.tests  fuzz-13731.tests  fuzz-13943.tests  fuzz-14689.tests  fuzz-15765.tests  fuzz-1579.tests  fuzz-15947.tests  fuzz-16010.tests  fuzz-17377.tests  fuzz-17460.tests  fuzz-17674.tests  fuzz-18243.tests  fuzz-18310.tests  fuzz-18901.tests  (+59 more)
tools/bash-oracle/: .gitignore  README.md  bash-dump-ast.patch  bash-oracle.patch  convert-gnu-bash.py  convert-oils.py  convert-tree-sitter.py  justfile  pyproject.toml  regenerate_tests.py  verify-tests.py
tools/bigquery-corpus/: README.md  fetch-bash.py
tools/fuzzer/: GENERATOR-PROPOSAL.md  README.md  discrepancy-input.txt  fuzz.py  out.tests  out2.tests  prompt.md  pyproject.toml
tools/fuzzer-agent/: README.md  pyproject.toml
tools/fuzzer-agent/logs/: assistant.md  messages.jsonl
tools/fuzzer-agent/src/fuzzer_agent/: __init__.py  agent.py  claude_agent.py  cli.py  pricing.py  tools.py  unattended.py
tools/fuzzer/docs/: fuzzing-research.md
tools/fuzzer/prompts/: fuzzer-fix-base.md  fuzzer-fix-local.md  fuzzer-fix-workflow.md  fuzzer-fix.md
tools/fuzzer/src/fuzzer/: __init__.py  character.py  common.py  generator.py  minimize.py  structural.py
tools/fuzzer/tests/: benchmark_oracle.py  test_common.py  test_minimize.py  verify_oracle_e_flag.py
tools/nix-bash-extractor/: README.md  extract.py
tools/transpiler/: README.md  check-style.py  pyproject.toml  transpile.py
transpiler/: CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  justfile  minilexer.ir  phases.md  pyproject.toml  spec.md
transpiler/expected/: Minilexer.cs  Minilexer.java  minilexer.c  minilexer.go  minilexer.py  minilexer.rb  minilexer.rs  minilexer.swift  minilexer.ts  minilexer.zig
transpiler/src/: check_style.py  cli.py  frontend.py  ir.py  middleend.py  tongues.py  tonguesw.py  type_overrides.py
transpiler/src/backend/: c.py  csharp.md  csharp.py  dart.py  go.py  java.py  javascript.py  lua.py  perl.md  perl.py  php.md  php.py  python.py  ruby.md  ruby.py  rust.py  swift.py  ts.py  typescript.py  util.py  zig.py
transpiler/src/frontend/: PLAN.md  __init__.py  ast_compat.py  builders.py  collection.py  context.py  fields.py  frontend.py  hierarchy.py  inference.py  lowering.py  names.py  parse.py  parser2.py  phases.md  signatures.py  subset.py  type_inference.py
transpiler/src/middleend/: PLAN.md  __init__.py  callbacks.py  hoisting.py  liveness.py  ownership.py  returns.py  scope.py  type_flow.py
transpiler/tests/: fixture.py  run_codegen_tests.py  test_c_backend.py  test_check_style.py  test_csharp_backend.py  test_go_backend.py  test_java_backend.py  test_names.py  test_python_backend.py  test_ruby_backend.py  test_rust_backend.py  test_subset.py  test_swift_backend.py  test_ts_backend.py  test_typescript_backend.py  test_zig_backend.py
transpiler/tests/codegen/: basic.tests  python_idioms.tests
(+256 files in other folders)
