[project]
name = "parable-transpiler"
version = "0.1.0"
requires-python = ">=3.14"

[dependency-groups]
dev = ["pytest"]

[project.scripts]
transpile = "src.cli:main"

# Run these with: uv run --script <name>
# Or add them to justfile

# Usage from transpiler/:
#   uv run python -m src.cli ../src/parable.py          # emit Go to stdout
#   uv run python -m src.cli ../src/parable.py | gofmt  # emit formatted Go
