[project]
name = "fuzzer-agent"
version = "0.1.0"
description = "Autonomous fuzzer bug fixing agent for Parable"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.0",
    "boto3>=1.35.0",
    "claude-agent-sdk>=0.1.19",
    "google-cloud-billing>=1.18.0",
    "litellm>=1.72.0",
    "requests>=2.32.0",
    "strands-agents>=1.22.0",
    "strands-agents-tools>=0.2.19",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
]

[project.scripts]
fuzzer-agent = "fuzzer_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzer_agent"]
