[project]
name = "fuzzer"
version = "0.1.0"
description = "Fuzzers for Parable bash parser"
requires-python = ">=3.14"
dependencies = ["loky>=3.5.0"]

[project.scripts]
fuzzer = "fuzzer:main"
minimizer = "fuzzer.minimize:main"

[build-system]
requires = ["uv_build>=0.9.26"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
